crates/test-files/fixtures/compile_errors/cannot_move2.fe
contract Foo:

  pub fn foo():
    x:u256[10]
    y:u256[10]
    c:u256[20] = x + y